# rss-server

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  run_docker.sh
src/: Cargo.toml  main.rs
src/api/: root.rs  users.rs
src/frontend/: package-lock.json  vite.config.js
src/frontend/src/: App.css  App.jsx  parseInstruction.jsx
src/libs/blogparser/: Cargo.toml
src/libs/blogparser/src/: RegexParser.rs  blog.rs  blog_client.rs  blog_encoding.rs  blog_getter.rs  blog_parser.rs  element_ref_extensions.rs  lib.rs  regex_parser.rs  test.rs
src/libs/blogparser/src/blog_parser/: blog_index_tests.rs  mod.rs  regex_parser.rs
src/middlewares/: azure_auth_middleware.rs  mod.rs  require_authenticated_middleware.rs
src/models/: app_state.rs  auth_context.rs  mod.rs
src/rssclient/: Cargo.toml
src/rssclient/src/: blog.rs  main.rs
src/rssclient/src/parser/: article_content_parser.rs  blog_content_parser.rs  mod.rs  node_parser.rs
src/rssreader/: Cargo.toml
src/rssreader/src/: main.rs
src/rssserver/: Cargo.toml
src/rssserver/src/: main.rs  response.rs
src/rssserver/src/api/: blog.rs  mod.rs  root.rs  rss.rs  rss_json.rs  static_content.rs  users.rs
src/rssserver/src/middlewares/: azure_auth_middleware.rs
src/rssserver/src/models/: mod.rs
src/server/: Cargo.toml
src/server/src/api/: root.rs
src/server/src/models/: app_state.rs
