[package]
name = "rssserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.4", features =["headers"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace", "normalize-path"] }
tracing-subscriber = "0.3"
tracing = "0.1"
azure_jwt = "0.2"