[package]
name = "rssserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blogparser = { path = "../libs/blogparser" }
axum = { version="0.6", features =["headers"] }
axum-macros = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace", "normalize-path", "cors"] }
tracing-subscriber = "0.3"
tracing = "0.1"
reqwest = "0.11"
rss = "2.0"
futures = "0.3"
mime_guess = "2.0"
include_dir = "0.7"