[package]
name = "blogparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
scraper = "0.17"
regex = "1.9"
once_cell = "1.18"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
async-trait = "0.1.71"